history retrieve
